Closed Bug 1275538 Opened 9 years ago Closed 9 years ago

Crash in mozilla::MediaFormatReader::RequestVideoData

Categories

(Core :: Audio/Video: Playback, defect, P1)

Unspecified
Windows 7
defect

Tracking

()

RESOLVED FIXED
mozilla49
Tracking Status
firefox49 --- fixed

People

(Reporter: marcia, Assigned: jya)

References

(Blocks 1 open bug)

Details

(Keywords: crash)

Crash Data

Attachments

(2 files)

This bug was filed from the Socorro interface and is report bp-51fb7abe-4cc5-4723-9411-4fd6d2160525. ============================================================= 29 crashes reported on Nightly Build 20160524073714 - https://crash-stats.mozilla.com/signature/?build_id=20160524073714&product=Firefox&release_channel=nightly&platform=Windows&signature=mozilla%3A%3AMediaFormatReader%3A%3ARequestVideoData&date=%3E%3D2016-05-24 Bug 1273018 had some similiar signatures in MediaFormatReader. Adding a few folks from that bug.
Flags: needinfo?(jyavenard)
Flags: needinfo?(dglastonbury)
Assignee: nobody → jyavenard
Flags: needinfo?(jyavenard)
this is a consequence of bug 1272964 (P4). We continue to service request for video data until we now the skip will fail... maybe we should just drop all pending frames at least (we've already stopped the decoder, but it will continue to return already decoded frames)
Flags: needinfo?(dglastonbury)
See Also: → 1257107
Comment on attachment 8756709 [details] MozReview Request: Bug 1275538: P1. Abort early if a skip request is in progress. r?kamidphish Review request updated; see interdiff: https://reviewboard.mozilla.org/r/55346/diff/1-2/
Attachment #8756709 - Attachment description: MozReview Request: Amend P1 → MozReview Request: Bug 1275538: P1. Abort early if a skip request is in progress. r?kamidphish
Attachment #8756709 - Flags: review?(dglastonbury)
Comment on attachment 8756710 [details] MozReview Request: Bug 1275538: P2. Drop decoded frames that we know are already too late. r?kamidphish Review request updated; see interdiff: https://reviewboard.mozilla.org/r/55348/diff/1-2/
Attachment #8756709 - Flags: review?(dglastonbury) → review?(gsquelart)
Attachment #8756710 - Flags: review?(dglastonbury) → review?(gsquelart)
Attachment #8756709 - Flags: review?(gsquelart) → review+
Comment on attachment 8756709 [details] MozReview Request: Bug 1275538: P1. Abort early if a skip request is in progress. r?kamidphish https://reviewboard.mozilla.org/r/55346/#review52402
Attachment #8756709 - Flags: review?(dglastonbury)
Attachment #8756710 - Flags: review?(gsquelart) → review?(dglastonbury)
sorry, Dan indicated he wanted to review this, so I'll wait for his feedback.
Attachment #8756710 - Flags: review?(dglastonbury) → review+
Comment on attachment 8756710 [details] MozReview Request: Bug 1275538: P2. Drop decoded frames that we know are already too late. r?kamidphish https://reviewboard.mozilla.org/r/55348/#review52412
Comment on attachment 8756709 [details] MozReview Request: Bug 1275538: P1. Abort early if a skip request is in progress. r?kamidphish https://reviewboard.mozilla.org/r/55346/#review52414
Attachment #8756709 - Flags: review?(dglastonbury) → review+
No it wouldn't. However, all those in those reports in build earlier than 24th have been fixed already The problem with those pgo build is that we often can't trust the backtrace, and it doesn't make sense. The crashes are always because there's a pending audio request promise. Dan any ideas?
Flags: needinfo?(jyavenard) → needinfo?(dglastonbury)
One of the crash in RequestAudioData has a build id of 20160521030227 and another 20160518030234 ; this is right after bug 1273018, but before bug 1272964 which is what is causing this bug. So obviously bug 1273018 didn't fix the problem of that assertion. So maybe the crash spiking after May 24th is just a coincidence and bug 1272964 has nothing to do with the audio assert. will open a new bug about it
See Also: → 1276495
jya, I've found an issue. I'll upload a patch soon.
Flags: needinfo?(dglastonbury)
Blocks: 1276556
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: