Bug 1275538: P1. Abort early if a skip request is in progress. r=gerald,kamidphish

We would only abort early if new data had been received. Which may not always be the case.

MozReview-Commit-ID: HvAUq5CTc7F